# rs621

./: .gitmodules  .travis.yml  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: get_posts.rs  login.rs  pool_search.rs  post_search.rs  search.rs  simple.rs  tags_search.rs
src/: client.rs  error.rs  lib.rs  pool.rs  post.rs  tag.rs  utils.rs
src/client/: dummy_rate_limit.rs  gloo_rate_limit.rs  rate_limit.rs  tokio_rate_limit.rs
src/mocked/: 320_before-1869409_fluffy_rating-s.json  320_fluffy_rating-s.json  320_fluffy_rating-s_before-2269211.json  320_page-1_fluffy_rating-s_order-score.json  320_page-2_fluffy_rating-s_order-score.json  400_fluffy_rating-s.json  favorite.json  id_8595.json  id_8595_535_2105_1470.json  index_fluffy_rating-s_limit-320.json  index_fluffy_rating-s_limit-5.json  index_fluffy_rating-s_limit-5_page-4.json  index_fluffy_rating-s_limit-80_before-id-1866033.json  pool_18274.json  pool_list-page_1.json  pool_list-page_2.json  pool_list_result-12668.json  pool_search-foo.json  show_id_8595.json  tags_limit-2_page-a12047.json  tags_limit-2_page-a12051.json  tags_order-count_limit-1_page-1.json  tags_order-count_limit-1_page-2.json
tests/: impl_std_error_trait.rs
