[package]
name = "rs621"
version = "0.6.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"
description = "Rust crate for the E621 API (a large online archive of furry art)."
repository = "https://github.com/nasso/rs621"
readme = "README.md"
keywords = ["e621", "e926", "furry", "api", "client"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
exclude = ["src/mocked"]

[badges]
travis-ci = { repository = "nasso/rs621" }
codecov = { repository = "nasso/rs621" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.7"
urlencoding = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features= ["derive"] }
serde_json = "1.0"
derivative = "2.1"
itertools = "0.9"

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dev-dependencies]
mockito = "0.23"

[dev-dependencies.tokio]
version = "0.2"
features = ["rt-threaded", "macros"]
