[package]
name = "rs621"
version = "0.7.0-alpha1"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"
description = "Rust crate for the E621 API (a large online archive of furry art)."
repository = "https://github.com/nasso/rs621"
readme = "README.md"
keywords = ["e621", "e926", "furry", "api", "client"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
exclude = ["src/mocked"]

[badges]
travis-ci = { repository = "nasso/rs621" }
codecov = { repository = "nasso/rs621" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rate-limit", "reqwest/default-tls"]
socks = ["reqwest/socks"]
rate-limit = ["tokio", "tokio/time", "tokio/sync"]

[dependencies]
thiserror = "1"
url = "2"
urlencoding = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derivative = "2"
itertools = "0.10"
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { optional = true, version = "1" }

[dev-dependencies]
mockito = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
