[package]
name = "rs621"
version = "0.7.0-alpha1"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"
description = "Rust crate for the E621 API (a large online archive of furry art)."
repository = "https://github.com/nasso/rs621"
readme = "README.md"
keywords = ["e621", "e926", "furry", "api", "client"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
exclude = ["src/mocked"]

[badges]
travis-ci = { repository = "nasso/rs621" }
codecov = { repository = "nasso/rs621" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rate-limit", "reqwest/default-tls"]
socks = ["reqwest/socks"]
rate-limit = ["gloo-timers", "futures", "web-time", "tokio"]

[dependencies]
thiserror = "1"
url = "2"
urlencoding = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derivative = "2"
itertools = "0.10"
futures = { version = "0.3", default-features = false }
reqwest = { version = ">=0.11, <0.13", default-features = false, features = ["json"] }
serde_with = "3.11.0"
serde_repr = "0.1.19"
either = "1.13.0"

[dev-dependencies]
mockito = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-timers = { optional = true, version = "0.3", features = ["futures"] }
futures = { optional = true, version = "0.3", features = ["std", "alloc"] }
web-time = { optional = true, version = "1.1.0" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { optional = true, version = "1", features = ["time", "sync"] }
